--- a/css/beatmap.css
+++ b/css/beatmap.css
@@ -52,6 +52,11 @@
     font-size: 100%;
     font-weight: 500;
 }
+.njs {
+    padding: 3px;
+    font-size: 100%;
+    font-weight: 500;
+}
 
 .author {
     padding: 0px;
