--- a/beta/css/performance.css
+++ b/beta/css/performance.css
@@ -1,52 +1,130 @@
-.performance {
+.performanceDisplay {
+    margin-right: auto;
+    margin-left: auto;
+    padding: 20px;
+
+    width: 800px;
+    height: 160px;
+    font-size: 300%;
+
+    border-radius: 10vh;
+    background-color: rgba(120, 120, 120, 0.1);
+}
+
+
+
+.comboContainer {
+    width: 150px;
+    height: 150px;
+    padding: 0px;
+    margin: 0px;
+
+    float: left;
+    margin-right: 40px;
+
+    text-align: center;
+    line-height: 60px;
+
+    border-radius: 0%;
+    border-color: white;
+    border-width: 0px;
+    border-top-width: 3px;
+    border-bottom-width: 3px;
+    border-style: solid;
+}
+.comboPrefix {
+    font-size: 50%;
+    font-weight: 100;
+    color: lightgray;
+}
+.combo {
+    font-size: 120%;
+    font-weight: 400;
+}
+
+
+
+
+
+.scoreContainer {
+    width: 400px;
+    height: 150px;
+    padding: 0px;
+    margin: 0px;
+
     float: left;
 
-    padding: 10px;
-    padding-top: 150px;
-    margin: 0px;
+    text-align: center;
+    line-height: 50px;
 
-    text-align: right;
+    border-radius: 0%;
+    border-color: white;
+    border-width: 0px;
+    border-style: solid;
 }
-.postfix {
-    padding: 0px;
-    margin: 0px;
-    
-    font-size: 50%;
-    font-weight: 200;
-
-    color: lightgray;
-}
-
-.rank {
-    padding: 0px;
-    margin: 0px;
-
-    font-size: 300%;
-    font-weight: 800;
-}
-
-.accuracy {
-    padding: 0px;
-    margin: 0px;
-
-    font-size: 50%;
-    font-weight: 200;
-
-    color: lightgray;
-}
-
 .score {
-    padding: 0px;
-    margin: 0px;
+    font-size: 120%;
+    font-weight: 600;
+}
+.accuracy {
+    font-size: 75%;
+    font-weight: 100;
 
-    font-size: 300%;
-    font-weight: 800;
+    color: lightgray;
+}
+.rank {
+    font-size: 100%;
+    font-weight: 600;
 }
 
-.combo {
+.timer {
+    font-size: 50%;
+    font-weight: 100;
+
+    color: lightgray;
+}
+.timerBar {
+    width: 100%;
+    height: 5px;
+
+    position: relative;
+    text-align: center;
+    background: lightgray;
+    background: linear-gradient(to left, rgba(128, 128, 128, 0.5) 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+}
+
+
+
+
+
+.multiplierContainer {
+    width: 150px;
+    height: 150px;
     padding: 0px;
     margin: 0px;
 
-    font-size: 300%;
-    font-weight: 800;
+    float: left;
+    margin-left: 40px;
+
+    text-align: center;
+    line-height: 130px;
+
+    border-radius: 100%;
+    border-color: rgb(255, 255, 255);
+    border-width: 3px;
+    border-style: solid;
+}
+.multiplierPrefix {
+    vertical-align: super;
+    font-size: 50%;
+    font-weight: 100;
+    color: lightgray;
+}
+.multiplier {
+    font-size: 120%;
+    font-weight: 600;
 }
