--- a/beta/css/performance.css
+++ b/beta/css/performance.css
@@ -7,7 +7,7 @@
     height: 160px;
     font-size: 300%;
 
-    border-radius: 10vh;
+    border-radius: 50px;
     background-color: rgba(120, 120, 120, 0.1);
 }
 
