--- a/beta/css/performance.css
+++ b/beta/css/performance.css
@@ -9,6 +9,10 @@
 
     border-radius: 50px;
     background-color: rgba(120, 120, 120, 0.2);
+
+    position: relative;
+    top: 20px;
+    transition: 0.5s ease;
 }
 
 
